test/error/binding_mix_port.sv
// pattern: illegal mix of ordered and named port connections
module example(
    input a, b, c
);
endmodule
module top;
    wire a, b, c;
    example e(1, .*);
endmodule
